--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
+  "private": true,
   "packageManager": "yarn@3.4.1",
   "devDependencies": {
+    "husky": "^8.0.3",
     "lint-staged": "^13.1.2",
     "prettier": "2.8.4"
+  },
+  "scripts": {
+    "postinstall": "husky install"
   }
 }
